force-app/main/default/objects/Truck_Delivery_Item__c/Truck_Delivery_Item__c.object-meta.xml
<CustomObject>
    <label>Truck Delivery Item</label>
    <nameField>
        <displayFormat>TruckDeliveryItem-{0000}</displayFormat>
        <label>Truck Delivery Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Truck Delivery Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>