force-app/main/default/objects/Truck_Delivery_Item__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Truck_Destination__c</referenceTo>
    <relationshipLabel>Truck Delivery Items</relationshipLabel>
    <relationshipName>Truck_Delivery_Items</relationshipName>
    <type>Lookup</type>
</CustomField>