force-app/main/default/objects/Truck_Delivery_Item__c/fields/ERP_Order__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP_Order</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Truck Delivery Items</relationshipLabel>
    <relationshipName>Truck_Load_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>