force-app/main/default/objects/Truck_Delivery_Item__c/fields/Legend_Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Legend_Transfer_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legend Transfer Request</label>
    <referenceTo>Legend_Transfer_Request__c</referenceTo>
    <relationshipLabel>Truck Delivery Items</relationshipLabel>
    <relationshipName>Truck_Delivery_Items</relationshipName>
    <type>Lookup</type>
</CustomField>